--- a/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
@@ -495,7 +495,7 @@
                     "id": "defaultProfile",
                     "params": [
                       {
-                        "paramType": "PARAMDATA",
+                        "paramType": "UPDATEABLEIDS",
                         "key": "familyLogicalId",
                         "value": "@{familyLogicalId}"
                       }
@@ -529,7 +529,8 @@
             "params": [
               {
                 "key": "familyLogicalId",
-                "value": "@{familyLogicalId}"
+                "value": "@{familyLogicalId}",
+                "paramType": "UPDATEABLEIDS"
               }
             ]
           }
@@ -569,7 +570,8 @@
           "params": [
             {
               "key": "familyId",
-              "value": "@{familyLogicalId}"
+              "value": "@{familyLogicalId}",
+              "paramType": "UPDATEABLEIDS"
             },
             {
               "key": "familyName",
