--- a/android/quest/src/main/AndroidManifest.xml
+++ b/android/quest/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
         <activity
             android:name=".ui.main.AppMainActivity"
             android:exported="false"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:clearTaskOnLaunch="true" />
 
         <activity
             android:name=".ui.questionnaire.QuestionnaireActivity"
