Fix the report register crash

--- a/android/quest/src/main/assets/configs/app/reports/service_delivery_measure_report_config.json
+++ b/android/quest/src/main/assets/configs/app/reports/service_delivery_measure_report_config.json
@@ -2,7 +2,7 @@
   "appId": "app",
   "configType": "measureReport",
   "id": "serviceDeliveryMeasureReport",
-  "registerId": "patientRegister",
+  "registerId": "inventoryRegister",
   "registerDate": "2020-10-27",
   "showFixedRangeSelection": true,
   "reports": [
