--- a/android/quest/src/main/assets/configs/app/reports/supply_chain_measure_report_config.json
+++ b/android/quest/src/main/assets/configs/app/reports/supply_chain_measure_report_config.json
@@ -4,7 +4,7 @@
   "registerDate": "2020-10-27",
   "showFixedRangeSelection": true,
   "id": "supplyChainMeasureReport",
-  "registerId": "patientRegister",
+  "registerId": "inventoryRegister",
   "reports": [
     {
       "title": "Stock Consumption",
