ordering of registers by related resources last updated (#2086)
* -SpotlessApply
-SpotlessCheck

* fixed translating param group id

* -Pass Group information to QuestionnaireActivity
-Update Group and resource in AppMainviewModel after questionnaire submition

* WIP refactoring logic

* ran spotless

* removed extra spacing

* removing extra changes

* removing extra changes

* ran spotless

* -Spotless commands

* -Pass Group information to QuestionnaireActivity
-Update Group and resource in AppMainviewModel after questionnaire submition

* merge conflicts

* Fix app crash

* -Conflict resolved
-Fix familyLogicalId as param

* -Conflict resolved
-Fix familyLogicalId as param

* -Conflict resolved
-Fix familyLogicalId as param

* -Remove static useage of familyLogicalId and make is generic by using actionparams

* -Remove extra checks for familylogicalId
-Create updateableIds for FamilyLogicalId as ActionParameterType

* -Remove static naming for FamilyLogicalId

* -Use resourceClassType to extract resourceType

* -Resolve conflicts

* -Fix failing test

* -Spotless commands

* -Merged with main and resolved conflicts

* -Fix failing tests
-Code refactoring

* -Spotless commands

* -Fix naming for ActionParameterType.kt

* -Fix naming for ActionParameterType.kt

* Update android/quest/src/main/java/org/smartregister/fhircore/quest/ui/questionnaire/QuestionnaireViewModel.kt

* Update android/quest/src/main/java/org/smartregister/fhircore/quest/ui/questionnaire/QuestionnaireViewModel.kt

* use extension

* test action param updateable id

* test for partial has value

---------

Co-authored-by: ahsanbhatti49 <ahsan.bhatti@venturedive.com>
Co-authored-by: SebaMutuku <sebastian.muthiani@gmail.com>
Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

--- a/android/quest/src/main/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/household_register_config.json
@@ -83,6 +83,11 @@
                 }
               }
             ]
+          },
+          {
+            "id": "filterPractitioners",
+            "resource": "Practitioner",
+            "searchParameter": "subject"
           }
         ]
       }
@@ -93,11 +98,19 @@
     "display": "{{ search.name.or.id }}",
     "computedRules": [
       "familyName",
-      "familyId"
+      "familyId",
+      "practitionerId"
     ]
   },
   "registerCard": {
     "rules": [
+      {
+        "name": "familyLogicalId",
+        "condition": "true",
+        "actions": [
+          "data.put('familyLogicalId', fhirPath.extractValue(Group, 'Group.id'))"
+        ]
+      },
       {
         "name": "familyName",
         "condition": "true",
@@ -110,6 +123,13 @@
         "condition": "true",
         "actions": [
           "data.put('familyId', fhirPath.extractValue(Group, 'Group.identifier[0].value'))"
+        ]
+      },
+      {
+        "name": "practitionerId",
+        "condition": "true",
+        "actions": [
+          "data.put('practitionerId', fhirPath.extractValue(Practitioner, \"Practitioner.id.split(\"/\")[1]\"))"
         ]
       },
       {
@@ -191,8 +211,9 @@
                   "id": "householdProfile",
                   "params": [
                     {
-                      "key": "familyId",
-                      "value": "@{familyId}"
+                      "paramType": "PARAMDATA",
+                      "key": "familyLogicalId",
+                      "value": "@{familyLogicalId}"
                     }
                   ]
                 }
@@ -205,8 +226,9 @@
                 "id": "householdProfile",
                 "params": [
                   {
-                    "key": "familyId",
-                    "value": "@{familyId}"
+                    "paramType": "PARAMDATA",
+                    "key": "familyLogicalId",
+                    "value": "@{familyLogicalId}"
                   }
                 ]
               }
