--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -2185,6 +2185,13 @@
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "9fac39bd-9750-4c1d-b355-1961de4e37f3"
+            ],
+            "params": [
+              {
+                "key": "familyLogicalId",
+                "value": "@{familyLogicalId}",
+                "paramType": "UPDATE_DATE_ON_EDIT"
+              }
             ]
           }
         }
@@ -2208,6 +2215,11 @@
             ]
           },
           "params": [
+            {
+              "key": "familyLogicalId",
+              "value": "@{familyLogicalId}",
+              "paramType": "UPDATE_DATE_ON_EDIT"
+            },
             {
               "paramType": "PREPOPULATE",
               "linkId": "652a752f-280a-4560-aac8-fa3196449961",
@@ -2584,6 +2596,13 @@
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "4ac4f9d6-6fc7-45bf-9a29-398798fc3134"
+            ],
+            "params": [
+              {
+                "key": "familyLogicalId",
+                "value": "@{familyLogicalId}",
+                "paramType": "UPDATE_DATE_ON_EDIT"
+              }
             ]
           }
         }
@@ -2604,6 +2623,13 @@
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "a881d53a-590c-4d52-ae0f-c87b7ff04148"
+            ],
+            "params": [
+              {
+                "key": "familyLogicalId",
+                "value": "@{familyLogicalId}",
+                "paramType": "UPDATE_DATE_ON_EDIT"
+              }
             ]
           }
         }
@@ -2627,6 +2653,11 @@
             ]
           },
           "params": [
+            {
+              "paramType": "UPDATE_DATE_ON_EDIT",
+              "key": "familyLogicalId",
+              "value": "@{familyLogicalId}"
+            },
             {
               "paramType": "PREPOPULATE",
               "linkId": "25cc8d26-ac42-475f-be79-6f1d62a44881",
@@ -2692,6 +2723,11 @@
             ]
           },
           "params": [
+            {
+              "key": "familyLogicalId",
+              "value": "@{familyLogicalId}",
+              "paramType": "UPDATE_DATE_ON_EDIT"
+            },
             {
               "paramType": "PREPOPULATE",
               "linkId": "25cc8d26-ac42-475f-be79-6f1d62a44881",
@@ -2817,6 +2853,13 @@
             "planDefinitions": [
               "55d89227-3a06-4a9a-b526-2819dcb1d301",
               "d6263f2d-2ebe-456c-bbb7-786dabd3ea22"
+            ],
+            "params": [
+              {
+                "paramType": "UPDATE_DATE_ON_EDIT",
+                "key": "familyLogicalId",
+                "value": "@{familyLogicalId}"
+              }
             ]
           }
         }
@@ -2836,7 +2879,14 @@
             "id": "7f1960ac-81b5-42a2-8813-97222de5745a",
             "resourceIdentifier": "@{patientId}",
             "title": "Remove family member",
-            "saveButtonText": "Update registration"
+            "saveButtonText": "Update registration",
+            "params": [
+              {
+                "paramType": "UPDATE_DATE_ON_EDIT",
+                "key": "familyLogicalId",
+                "value": "@{familyLogicalId}"
+              }
+            ]
           }
         }
       ]
