--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -125,6 +125,13 @@
       ]
     },
     {
+      "name": "childCardVisible",
+      "condition": "true",
+      "actions": [
+        "data.put('childCardVisible', data.get('patientAge') == 'true' && data.get('patientAge')<=5)"
+      ]
+    },
+    {
       "name": "patientGender",
       "condition": "true",
       "actions": [
@@ -2862,6 +2869,45 @@
               }
             ]
           }
+        }
+      ]
+    },
+    {
+      "title": "Child health card",
+      "titleColor": "@{patientTextColor}",
+      "visible": "@{childCardVisible}",
+      "enabled": "@{childCardVisible}",
+      "actions": [
+        {
+          "trigger": "ON_CLICK",
+          "workflow": "LAUNCH_PROFILE",
+          "id": "childhealthcardProfile"
+        }
+      ]
+    },
+    {
+      "title": "Past encounters",
+      "titleColor": "@{patientTextColor}",
+      "visible": "true",
+      "enabled": "true",
+      "actions": [
+        {
+          "trigger": "ON_CLICK",
+          "workflow": "LAUNCH_PROFILE",
+          "id": "individualpastencountersProfile"
+        }
+      ]
+    },
+    {
+      "title": "Upcoming encounters",
+      "titleColor": "@{patientTextColor}",
+      "visible": "true",
+      "enabled": "true",
+      "actions": [
+        {
+          "trigger": "ON_CLICK",
+          "workflow": "LAUNCH_PROFILE",
+          "id": "individualupcomingencountersProfile"
         }
       ]
     },
