--- a/android/engine/build.gradle
+++ b/android/engine/build.gradle
@@ -206,7 +206,7 @@ dependencies {
         exclude group: 'com.google.android.fhir', module: 'engine'
     }
 
-    api('org.smartregister:workflow:0.1.0-alpha02-preview6-SNAPSHOT') {
+    api('org.smartregister:workflow:0.1.0-alpha02-preview9-SNAPSHOT') {
         transitive = true
         exclude group: 'xerces'
         exclude group: 'com.github.java-json-tools'
@@ -225,7 +225,7 @@ dependencies {
         exclude group: 'com.google.android.fhir', module: 'engine'
     }
 
-    api('org.smartregister:engine:0.1.0-beta02-preview13.3-SNAPSHOT') {
+    api('org.smartregister:engine:0.1.0-beta02-preview14-SNAPSHOT') {
         transitive = true
         exclude group: 'com.google.android.fhir', module: 'common'
         exclude group: 'com.github.ben-manes.caffeine'
