Catch All Exceptions (#2161)
* Catch All Exceptions

* Refactor Uncaught Exception Handling

* Update android/quest/src/main/java/org/smartregister/fhircore/quest/QuestApplication.kt

Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

* Update android/engine/src/main/java/org/smartregister/fhircore/engine/sync/SyncBroadcaster.kt

Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

* remove mocking

* more tests

* resolve some warnings

---------

Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

--- a/android/quest/src/main/AndroidManifest.xml
+++ b/android/quest/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
 
         <activity
             android:name=".ui.appsetting.AppSettingActivity"
-            android:exported="true">
+            android:exported="true"
+            android:clearTaskOnLaunch="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,7 +41,8 @@
         <activity
             android:name=".ui.main.AppMainActivity"
             android:exported="false"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:clearTaskOnLaunch="true" />
 
         <activity
             android:name=".ui.questionnaire.QuestionnaireActivity"
