--- a/android/jacoco.gradle
+++ b/android/jacoco.gradle
@@ -46,6 +46,7 @@ task fhircoreJacocoReport(type: JacocoReport, dependsOn: [
             'org/smartregister/fhircore/engine/configuration/view/ServiceCardProperties.*',
             'org/smartregister/fhircore/engine/configuration/view/SpacerProperties.*',
             'org/smartregister/fhircore/engine/data/remote/model/response/*',
+            'org/smartregister/fhircore/engine/domain/model/CarePlanConfig.*',
             'org/smartregister/fhircore/engine/domain/model/ExtractedResource.*',
             'org/smartregister/fhircore/engine/domain/model/FhirResourceConfigs.*',
             'org/smartregister/fhircore/engine/domain/model/OverflowMenuItemConfig.*',
