replace cd with working dir

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,7 +53,8 @@ jobs:
 
     - run: |
         echo "Run, Build Application using script"
-        cd android && ./gradlew build
+        ./gradlew build
+      working-directory: android
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
