--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,7 +53,7 @@ jobs:
 
     - run: |
         echo "Run, Build Application using script"
-        ./gradlew build
+        ./gradlew :quest:clean && ./gradlew :quest:build
       working-directory: android
 
     - name: Perform CodeQL Analysis
