--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -51,9 +51,8 @@ jobs:
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
 
-    - run: |
-        echo "Run, Build Application using script"
-        ./gradlew :quest:clean && ./gradlew :quest:build
+    - name: Build application using script
+      run: ./gradlew :quest:clean && ./gradlew :quest:build
       working-directory: android
 
     - name: Perform CodeQL Analysis
