Added Tab View in Household Profile

--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -288,6 +288,10 @@ dependencies {
 
     implementation 'androidx.work:work-testing:2.7.1'
 
+    // Paging Compose
+    implementation "com.google.accompanist:accompanist-pager:0.24.1-alpha"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.24.1-alpha"
+
     testImplementation deps.junit5_api
     testRuntimeOnly deps.junit5_engine
     testRuntimeOnly deps.junit5_engine_vintage
