configured relationship code through configuration

--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -2198,6 +2198,13 @@
                 "key": "familyLogicalId",
                 "value": "@{familyLogicalId}",
                 "paramType": "UPDATE_DATE_ON_EDIT"
+              },
+              {
+                "paramType": "PREPOPULATE",
+                "linkId": "652a752f-280a-4560-aac8-fa3196449961",
+                "dataType": "INTEGER",
+                "key": "isFamilyHeadExists",
+                "value": "@{isFamilyHeadExists}"
               }
             ]
           }
