--- a/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
@@ -57,7 +57,7 @@
           },
           {
             "resource": "RelatedPerson",
-            "fhirPathExpression": "patient"
+            "searchParameter": "patient"
           }
         ],
         "sortConfigs": [
@@ -124,6 +124,13 @@
               "dataType": "INTEGER",
               "key": "opensrpId",
               "value": "@{humanReadableId}"
+            },
+            {
+              "paramType": "PREPOPULATE",
+              "linkId": "toggle-is-family-head",
+              "dataType": "INTEGER",
+              "key": "isFamilyHeadExists",
+              "value": "@{isFamilyHeadExists}"
             }
           ]
         }
@@ -164,6 +171,20 @@
       "condition": "true",
       "actions": [
         "data.put('humanReadableId', service.generateRandomSixDigitInt())"
+      ]
+    },
+    {
+      "name": "familyHeadId",
+      "condition": "true",
+      "actions": [
+        "data.put('familyHeadId', service.filterResources(RelatedPerson, 'RelatedPerson.relationship.coding.code=\"99990006\"').get(0).patient.reference)"
+      ]
+    },
+    {
+      "name": "isFamilyHeadExists",
+      "condition": "true",
+      "actions": [
+        "data.put('isFamilyHeadExists', empty(data.get('familyHeadId'))? 0 : 1)"
       ]
     }
   ],
@@ -235,6 +256,10 @@
                 {
                   "resourceType": "Observation",
                   "fhirPathExpression": "Observation.subject.reference"
+                },
+                {
+                  "resourceType": "RelatedPerson",
+                  "fhirPathExpression": "RelatedPerson.patient.reference"
                 }
               ]
             }
@@ -498,6 +523,11 @@
                         "paramType": "UPDATE_DATE_ON_EDIT",
                         "key": "familyLogicalId",
                         "value": "@{familyLogicalId}"
+                      },
+                      {
+                        "paramType": "PARAMDATA",
+                        "key": "isFamilyHeadExists",
+                        "value": "@{isFamilyHeadExists}"
                       }
                     ]
                   }
@@ -553,7 +583,12 @@
             "dialogWarningMessage": "{{ assign.household.head.warning }}",
             "dialogContentMessage": "{{ select.new.household.head }}",
             "noMembersErrorMessage": "{{ no.members.error.message }}",
-            "managingEntityReassignedMessage": "Household head reassigned successfully"
+            "managingEntityReassignedMessage": "Household head reassigned successfully",
+            "relationshipCode": {
+              "system": "http://hl7.org/fhir/ValueSet/relatedperson-relationshiptype",
+              "code": "99990006",
+              "display": "Family Head"
+            }
           }
         }
       ]
