Reorganize CQL docs

--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -193,6 +193,12 @@ android {
             versionNameSuffix "-engage"
 
         }
+
+        mpower {
+            dimension "apps"
+            applicationIdSuffix ".mpower"
+            versionNameSuffix "-mpower"
+        }
     }
     sourceSets {
         main {
