--- a/android/build.gradle
+++ b/android/build.gradle
@@ -84,4 +84,14 @@ subprojects {
             outputDirectory.set(file("${project.rootProject.projectDir}/docs"))
         }
     }
+
+    ext.getProps = { propName ->
+        def propsFile = rootProject.file('local.properties')
+        if (propsFile.exists()) {
+            def props = new Properties()
+            props.load(new FileInputStream(propsFile))
+            return props[propName]
+        }
+        return ""
+    }
 }
